<rev> Fix issues 40 and 42 for the Python DAQmx API
<rev> Fix issue 40: is_task_done() cannot be used.
https://github.com/ni/nidaqmx-python/issues/40

<rev> Fix issue 42: register signal event not supported?
https://github.com/ni/nidaqmx-python/issues/42

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist = py27,py34,py35,py36
 
 [testenv]
 install_command = pip install --pre -i http://ni-pypi.amer.corp.natinst.com --trusted-host ni-pypi.amer.corp.natinst.com {opts} {packages}
-commands = pytest --quiet --junitxml=pytests-{envname}.xml
+commands = pytest --quiet --junitxml=pytests-{envname}.xml nidaqmx
 deps =
    -rrequirements_test.txt
    -rrequirements.txt
