add a bridge test device to MAX config

--- a/nidaqmx/tests/max_config/nidaqmxMaxConfig.ini
+++ b/nidaqmx/tests/max_config/nidaqmxMaxConfig.ini
@@ -1,6 +1,6 @@
 ﻿[DAQmx]
-MajorVersion = 17
-MinorVersion = 0
+MajorVersion = 21
+MinorVersion = 3
 
 [DAQmxScale double_gain_scale]
 Lin.Slope = 2
@@ -22,6 +22,15 @@ Poly.ReverseCoeff = 0, 1
 PreScaledUnits = Volts
 ScaledUnits = 
 ScaleType = Polynomial
+
+[DAQmxDevice bridgeTester]
+ProductType = PXIe-4331
+DevSerialNum = 0x0
+DevIsSimulated = 1
+ProductNum = 0x74A9C4C4
+BusType = PXIe
+PXI.ChassisNum = 1
+PXI.SlotNum = 2
 
 [DAQmxDevice nidaqmxMultithreadingTester1]
 ProductType = PCIe-6363
