--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,8 @@ numpy = [
     {version = "^1.22", python = "^3.8"}
 ]
 six = "^1.16"
+# This functionality was merged into python stdlib beginning in 3.8
+importlib_metadata = {version = "^4.10", python="~3.7" }
 
 [tool.poetry.dev-dependencies]
 # Test
