switch to poetry and update deps

--- a/tox.ini
+++ b/tox.ini
@@ -4,11 +4,11 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py34,py35,py36
+isolated_build = true
+envlist = py37, py38, py39, py310
 
 [testenv]
-install_command = pip install --pre -i http://ni-pypi.amer.corp.natinst.com --trusted-host ni-pypi.amer.corp.natinst.com {opts} {packages}
-commands = pytest --quiet --junitxml=pytests-{envname}.xml nidaqmx
-deps =
-   -rrequirements_test.txt
-   -rrequirements.txt
+whitelist_externals = poetry
+commands =
+   poetry install -v
+   poetry run pytest --quiet --junitxml=pytests-{envname}.xml nidaqmx
