--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,22 +30,27 @@ exclude = ["nidaqmx/tests"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+# Need two version blocks to match numpy's changing version requirements.
 numpy = [
-    {version = "1.21.5", python = "~3.7"},
-    {version = "^1.22", python = "^3.8"}
+    {version="1.21.5", python = "~3.7"},
+    {version="^1.22", python = "^3.8"}
 ]
 six = "^1.16"
 # This functionality was merged into python stdlib beginning in 3.8
-importlib_metadata = {version = "^4.10", python="~3.7" }
+importlib_metadata = {version="^4.10", python="~3.7"}
+# Documentation, must be in main dependencies (but optional) list for
+# readthedocs integration.
+# See https://github.com/readthedocs/readthedocs.org/issues/4912.
+Sphinx = {version="^4.4", optional=true}
+sphinx_rtd_theme = {version="^1.0", optional=true}
+
+[tool.poetry.extras]
+docs = ["sphinx", "sphinx_rtd_theme"]
 
 [tool.poetry.dev-dependencies]
 # Test
 pytest = "^6.2"
 pykka = "^3.0"
-
-# Documentation
-Sphinx = "^4.4"
-sphinx_rtd_theme = "^1.0"
 
 [build-system]
 requires = ["poetry>=1.1.12"]
