pass posargs to pytest from tox

--- a/tox.ini
+++ b/tox.ini
@@ -11,4 +11,4 @@ envlist = py37, py38, py39, py310
 whitelist_externals = poetry
 commands =
    poetry install -v
-   poetry run pytest --quiet --junitxml=pytests-{envname}.xml nidaqmx
+   poetry run pytest --quiet --junitxml=pytests-{envname}.xml nidaqmx {posargs}
