add power tests

--- a/nidaqmx/tests/max_config/nidaqmxMaxConfig.ini
+++ b/nidaqmx/tests/max_config/nidaqmxMaxConfig.ini
@@ -1,6 +1,6 @@
 ﻿[DAQmx]
 MajorVersion = 21
-MinorVersion = 3
+MinorVersion = 8
 
 [DAQmxScale double_gain_scale]
 Lin.Slope = 2
@@ -67,4 +67,16 @@ ProductNum = 0x7435C4C4
 BusType = PCIe
 PCI.BusNum = 0x0
 PCI.DevNum = 0x0
+
+[DAQmxCDAQChassis tsChassisTester]
+ProductType = TS-15000
+DevSerialNum = 0x0
+DevIsSimulated = 1
+
+[DAQmxCDAQModule tsPowerTester]
+ProductType = TS-15200
+DevSerialNum = 0x0
+DevIsSimulated = 1
+CompactDAQ.ChassisDevName = tsChassisTester
+CompactDAQ.SlotNum = 1
 
