this might work

--- a/nidaqmx/tests/max_config/nidaqmxMaxConfig.ini
+++ b/nidaqmx/tests/max_config/nidaqmxMaxConfig.ini
@@ -73,10 +73,17 @@ ProductType = TS-15000
 DevSerialNum = 0x0
 DevIsSimulated = 1
 
-[DAQmxCDAQModule tsPowerTester]
+[DAQmxCDAQModule tsPowerTester1]
 ProductType = TS-15200
 DevSerialNum = 0x0
 DevIsSimulated = 1
 CompactDAQ.ChassisDevName = tsChassisTester
 CompactDAQ.SlotNum = 1
+
+[DAQmxCDAQModule tsPowerTester2]
+ProductType = TS-15200
+DevSerialNum = 0x0
+DevIsSimulated = 1
+CompactDAQ.ChassisDevName = tsChassisTester
+CompactDAQ.SlotNum = 2
 
