--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ exclude = ["nidaqmx/tests"]
 [tool.poetry.dependencies]
 python = "^3.7"
 numpy = [
-    {version="^1.20", python = "~3.7"},
+    {version="^1.20", python = "<3.10"},
     # precompiled wheels only available in the 1.22+
     {version="^1.22", python = "^3.10"}
 ]
