fix read issue with multiple channel types in a single task

--- a/nidaqmx/tests/max_config/nidaqmxMaxConfig.ini
+++ b/nidaqmx/tests/max_config/nidaqmxMaxConfig.ini
@@ -87,3 +87,10 @@ DevIsSimulated = 1
 CompactDAQ.ChassisDevName = tsChassisTester
 CompactDAQ.SlotNum = 2
 
+[DAQmxCDAQModule tsVoltageTester1]
+ProductType = TS-15100
+DevSerialNum = 0x0
+DevIsSimulated = 1
+CompactDAQ.ChassisDevName = tsChassisTester
+CompactDAQ.SlotNum = 3
+
