--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,6 @@ numpy = [
     # precompiled wheels only available in the 1.22+
     {version="^1.22", python = "^3.10"}
 ]
-click = "^8.1"
 six = "^1.16"
 # This functionality was merged into python stdlib beginning in 3.8
 importlib_metadata = {version="^4.10", python="~3.7"}
@@ -53,6 +52,8 @@ docs = ["sphinx", "sphinx_rtd_theme"]
 pytest = "^6.2"
 pykka = "^3.0"
 tox = "^3.24"
+click = "^8.1"
+Mako = "^1.2"
 
 [build-system]
 requires = ["poetry>=1.1.12"]
