feat: move nidaqmx to source
Signed-off-by: Sakthi Subramanian Muthuramalingam <sakthisubramaniam@solitontech.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ classifiers = [
     "Topic :: System :: Hardware :: Hardware Drivers"
 ]
 exclude = ["nidaqmx/tests"]
+packages = [{ include = "nidaqmx", from = "src" }]
 
 [tool.poetry.dependencies]
 python = "^3.7"
