feat: exclude files in black
Signed-off-by: Sakthi Subramanian Muthuramalingam <sakthisubramaniam@solitontech.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,11 @@ ni-python-styleguide = "^0.4"
 
 [tool.black]
 line-length = 100
+exclude = ["generated/",
+    "docs/",
+    "src/nidaqmx/",
+    "src/codegen/metadata/",
+    "src/codegen/templates/"]
 
 [build-system]
 requires = ["poetry>=1.1.12"]
