--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,11 +60,10 @@ ni-python-styleguide = "^0.4"
 
 [tool.black]
 line-length = 100
-exclude = ["generated/",
-    "docs/",
-    "src/nidaqmx/",
-    "src/codegen/metadata/",
-    "src/codegen/templates/"]
+extend_exclude = "generated,docs,src/nidaqmx,src/codegen/metadata,src/codegen/templates"
+
+[tool.ni-python-styleguide]
+extend_exclude = "docs,generated,src/nidaqmx,src/codegen/metadata,src/codegen/templates"
 
 [build-system]
 requires = ["poetry>=1.1.12"]
