--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -7,7 +7,9 @@ on:
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: 
+      - windows-latest
+      - x64
     strategy:
       matrix:
         python-version: ["3.7"]
