--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -8,8 +8,7 @@ jobs:
   build:
 
     runs-on: 
-      - windows-latest
-      - x64
+      - ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.7"]
