--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -36,4 +36,4 @@ jobs:
         run: git diff --exit-code
       - name: Test with pytest
         run: |
-          poetry run pytest .\tests\
+          poetry run pytest
