--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,8 +32,8 @@ packages = [{ include = "nidaqmx", from = "src" }]
 [tool.poetry.dependencies]
 python = "^3.7"
 numpy = [
+  # numpy 1.22 dropped support for Python 3.7.
   {version=">=1.20,<1.22", python="<3.8"},
-  # precompiled wheels only available in the 1.22+
   {version=">=1.22", python="^3.8"},
 ]
 six = "^1.16"
@@ -61,7 +61,7 @@ sphinx_rtd_theme = "1.0"
 
 [tool.black]
 line-length = 100
-extend_exclude = "generated,docs,src/nidaqmx,src/codegen/metadata,src/codegen/templates"
+extend_exclude = "docs,generated,src/nidaqmx,src/codegen/metadata,src/codegen/templates"
 
 [tool.ni-python-styleguide]
 extend_exclude = "docs,generated,src/nidaqmx,src/codegen/metadata,src/codegen/templates"
