--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,7 @@ line-length = 100
 extend_exclude = "docs,generated,src/nidaqmx,src/codegen/metadata,src/codegen/templates"
 
 [tool.ni-python-styleguide]
-extend_exclude = "docs,generated,src/nidaqmx,src/codegen/metadata,src/codegen/templates"
+extend_exclude = "docs,generated,src/nidaqmx,src/codegen/metadata,src/codegen/templates,src/handwritten"
 
 [build-system]
 requires = ["poetry>=1.1.12"]
