add tests for device properties

--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -29,8 +29,10 @@ DevSerialNum = 0x0
 DevIsSimulated = 1
 ProductNum = 0x74A9C4C4
 BusType = PXIe
-PXI.ChassisNum = 1
-PXI.SlotNum = 2
+PXI.ChassisNum = 4294967295
+PXI.SlotNum = 4294967295
+
+[DAQmxAccessory RM-24999_A/bridgeTester/0]
 
 [DAQmxDevice nidaqmxMultithreadingTester1]
 ProductType = PCIe-6363
