feat: set default values
Signed-off-by: Sakthi Subramanian Muthuramalingam <sakthisubramaniam@solitontech.com>

--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -8,6 +8,8 @@ Lin.YIntercept = 0
 PreScaledUnits = Volts
 ScaledUnits = 
 ScaleType = Linear
+Author = Test Author
+AllowInteractiveEditing = True
 
 [DAQmxScale no_scaling_scale]
 Lin.Slope = 1
