added test data to ni max config

--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -19,6 +19,8 @@ SampQuant.SampPerChan = 100
 SampClk.Rate = 1000
 SampTimingType = Sample Clock
 SampClk.Src = 
+Author = Test Author
+AllowInteractiveEditing = True
 
 [DAQmxScale double_gain_scale]
 Lin.Slope = 2
