add test for persisted channel properties

--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -2,6 +2,18 @@
 MajorVersion = 21
 MinorVersion = 8
 
+[DAQmxChannel VoltageTesterChannel]
+AI.MeasType = Voltage
+AI.Voltage.Units = Volts
+AI.TermCfg = Differential
+AI.Max = 10
+AI.Min = -10
+ChanType = Analog Input
+PhysicalChanName = tsVoltageTester1/ai0
+Descr = 
+Author = "Test Author"
+AllowInteractiveEditing = True
+
 [DAQmxScale double_gain_scale]
 Lin.Slope = 2
 Lin.YIntercept = 0
