tox.ini: Enable testing with Python 3.11
Signed-off-by: Brad Keryan <brad.keryan@ni.com>

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [tox]
 isolated_build = true
-envlist = clean, py37, py38, py39, py310, report
+envlist = clean, py37, py38, py39, py310, py311, report
 
 [testenv]
 whitelist_externals = poetry
