--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -2,6 +2,26 @@
 MajorVersion = 21
 MinorVersion = 8
 
+[DAQmxChannel VoltageTesterTask/Voltage_0]
+AI.MeasType = Voltage
+AI.Voltage.Units = Volts
+AI.TermCfg = Differential
+AI.Max = 10
+AI.Min = -10
+ChanType = Analog Input
+PhysicalChanName = tsVoltageTester1/ai0
+
+[DAQmxTask VoltageTesterTask]
+Channels = VoltageTesterTask/Voltage_0
+SampQuant.SampMode = Finite Samples
+SampClk.ActiveEdge = Rising
+SampQuant.SampPerChan = 100
+SampClk.Rate = 1000
+SampTimingType = Sample Clock
+SampClk.Src = 
+Author = Test Author
+AllowInteractiveEditing = True
+
 [DAQmxScale double_gain_scale]
 Lin.Slope = 2
 Lin.YIntercept = 0
