--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ classifiers = [
     "Topic :: System :: Hardware :: Hardware Drivers"
 ]
 exclude = ["nidaqmx/tests"]
-packages = [{ include = "nidaqmx", from = "src" }]
+packages = [{ include = "nidaqmx", from = "generated" }]
 
 [tool.poetry.dependencies]
 python = "^3.7"
@@ -37,6 +37,7 @@ numpy = [
   {version=">=1.22", python="^3.8"},
 ]
 six = "^1.16"
+deprecation = ">=2.1"
 # This functionality was merged into python stdlib beginning in 3.8
 importlib_metadata = {version="^4.2", python="~3.7"}
 # Documentation, must be in main dependencies (but optional) list for
@@ -56,7 +57,6 @@ pykka = "^3.0"
 tox = "^3.24"
 click = "^8.1"
 Mako = "^1.2"
-deprecation = "^2.1"
 ni-python-styleguide = "^0.4"
 sphinx_rtd_theme = "1.0"
 
