PR workflow: Use Python 3.8
The codegen scripts pass dirs_exist_ok to shutil.copytree(), which was
added in Python 3.8.

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -11,7 +11,8 @@ jobs:
       - ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.7"]
+        # The codegen scripts require Python 3.8 or later.
+        python-version: ["3.8"]
 
     steps:
       - uses: actions/checkout@v3
