PR workflow: Delete generated/nidaqmx before running codegen
Signed-off-by: Brad Keryan <brad.keryan@ni.com>

--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -32,6 +32,8 @@ jobs:
         run: |
           poetry run ni-python-styleguide lint
       - name: Generate ni-daqmx files
-        run: poetry run python src/codegen --dest generated/nidaqmx
+        run: |
+          rm -fr generated/nidaqmx
+          poetry run python src/codegen --dest generated/nidaqmx
       - name: Check for files dirtied by codegen
         run: git diff --exit-code
