tests: Do not modify persisted scale properties
Signed-off-by: Brad Keryan <brad.keryan@ni.com>

--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -42,6 +42,7 @@ ScaledUnits =
 ScaleType = Linear
 Author = Test Author
 AllowInteractiveEditing = True
+Descr = Twice the gain
 
 [DAQmxScale no_scaling_scale]
 Lin.Slope = 1
