--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -90,6 +90,13 @@ BusType = PCIe
 PCI.BusNum = 0x0
 PCI.DevNum = 0x0
 
+[DAQmxDevice Dev1]
+ProductType = USB-9265
+DevSerialNum = 0x0
+DevIsSimulated = 1
+ProductNum = 0x712C
+BusType = USB
+
 [DAQmxCDAQChassis tsChassisTester]
 ProductType = TS-15000
 DevSerialNum = 0x0
