Fix: Commized fixture and updated device name

--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -90,7 +90,7 @@ BusType = PCIe
 PCI.BusNum = 0x0
 PCI.DevNum = 0x0
 
-[DAQmxDevice Dev1]
+[DAQmxDevice nidaqmxUSBTester]
 ProductType = USB-9265
 DevSerialNum = 0x0
 DevIsSimulated = 1
