Addition of tests for device properties (#237)
* add tests for device properties

---------

Co-authored-by: Subash Suresh <subash.suresh@solitontech.com>

--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -67,6 +67,8 @@ BusType = PXIe
 PXI.ChassisNum = 1
 PXI.SlotNum = 2
 
+[DAQmxAccessory RM-24999_A/bridgeTester/0]
+
 [DAQmxDevice nidaqmxMultithreadingTester1]
 ProductType = PCIe-6363
 DevSerialNum = 0x0
