Fix: Review comments

--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -112,6 +112,15 @@ DevIsSimulated = 1
 ProductNum = 0x712C
 BusType = USB
 
+[DAQmxDevice aoTester]
+ProductType = PXIe-4322
+DevSerialNum = 0x0
+DevIsSimulated = 1
+ProductNum = 0x76ABC4C4
+BusType = PXIe
+PXI.ChassisNum = 1
+PXI.SlotNum = 2
+
 [DAQmxCDAQChassis tsChassisTester]
 ProductType = TS-15000
 DevSerialNum = 0x0
