tests: Rename cDAQ1 to avoid name conflict

--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -131,7 +131,7 @@ DevIsSimulated = 1
 CompactDAQ.ChassisDevName = tsChassisTester
 CompactDAQ.SlotNum = 3
 
-[DAQmxCDAQChassis cDAQ1]
+[DAQmxCDAQChassis cdaqChassisTester]
 ProductType = cDAQ-9185
 DevSerialNum = 0x0
 DevIsSimulated = 1
