fix coverage report

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ envlist = clean, py37, py38, py39, py310, py311, report
 whitelist_externals = poetry
 commands =
    poetry install -v
-   poetry run pytest --quiet --cov=nidaqmx --cov-append --cov-report= --junitxml=pytests-{envname}.xml tests/ {posargs}
+   poetry run pytest --quiet --cov=generated/nidaqmx --cov-append --cov-report= --junitxml=pytests-{envname}.xml tests/ {posargs}
 
 [testenv:clean]
 skip_install = true
