--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ sphinx_rtd_theme = {version="^1.0", optional=true}
 
 [tool.poetry.extras]
 docs = ["sphinx", "sphinx_rtd_theme"]
+grpc = ["grpcio", "protobuf"]
 
 [tool.poetry.dev-dependencies]
 # Test
@@ -60,6 +61,8 @@ Mako = "^1.2"
 ni-python-styleguide = "^0.4"
 sphinx_rtd_theme = "1.0"
 poetry-grpc-plugin = "^0.1.0"
+grpcio = { version = "^1.49.0", optional = true }
+protobuf = "^3.20"
 
 [tool.black]
 line-length = 100
