--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,8 @@ importlib_metadata = {version="^4.2", python="~3.7"}
 # See https://github.com/readthedocs/readthedocs.org/issues/4912.
 Sphinx = {version="^4.3", optional=true}
 sphinx_rtd_theme = {version="^1.0", optional=true}
+grpcio = { version = "^1.49.0", optional = true }
+protobuf = { version = "^4.21", optional = true }
 
 [tool.poetry.extras]
 docs = ["sphinx", "sphinx_rtd_theme"]
@@ -60,9 +62,10 @@ click = "^8.1"
 Mako = "^1.2"
 ni-python-styleguide = "^0.4"
 sphinx_rtd_theme = "1.0"
-poetry-grpc-plugin = "^0.1.0"
-grpcio = { version = "^1.49.0", optional = true }
-protobuf = "^3.20"
+grpcio-tools = "1.49.1"
+mypy = ">=1.0"
+mypy-protobuf = ">=3.4"
+types-protobuf = "^4.21"
 
 [tool.black]
 line-length = 100
