--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,20 +45,29 @@ importlib_metadata = {version="^4.2", python="~3.7"}
 # See https://github.com/readthedocs/readthedocs.org/issues/4912.
 Sphinx = {version="^4.3", optional=true}
 sphinx_rtd_theme = {version="^1.0", optional=true}
+grpcio = { version = "^1.49.0", optional = true }
+protobuf = { version = "^4.21", optional = true }
 
 [tool.poetry.extras]
 docs = ["sphinx", "sphinx_rtd_theme"]
+grpc = ["grpcio", "protobuf"]
 
-[tool.poetry.dev-dependencies]
 # Test
+[tool.poetry.group.dev.dependencies]
 pytest = ">=7.2"
 pytest-cov = ">=4.0"
 pykka = "^3.0"
 tox = "^3.24"
-click = "^8.1"
-Mako = "^1.2"
 ni-python-styleguide = "^0.4"
 sphinx_rtd_theme = "1.0"
+mypy = ">=1.0"
+types-protobuf = "^4.21"
+
+[tool.poetry.group.codegen.dependencies]
+click = "^8.1"
+Mako = "^1.2"
+grpcio-tools = "1.49.1"
+mypy-protobuf = ">=3.4"
 
 [tool.black]
 line-length = 100
@@ -68,5 +77,5 @@ extend_exclude = "docs,generated,src/codegen/metadata,src/codegen/templates"
 extend_exclude = "docs,generated,src/codegen/metadata,src/codegen/templates,src/handwritten"
 
 [build-system]
-requires = ["poetry>=1.1.12"]
+requires = ["poetry>=1.2"]
 build-backend = "poetry.masonry.api"
