Upgrade ni-python-styleguide to version 0.4.1 or later

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ pytest = ">=7.2"
 pytest-cov = ">=4.0"
 pykka = "^3.0"
 tox = "^3.24"
-ni-python-styleguide = "^0.4"
+ni-python-styleguide = ">=0.4.1"
 sphinx_rtd_theme = "1.0"
 mypy = ">=1.0"
 types-protobuf = "^4.21"
