--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ grpc = ["grpcio", "protobuf"]
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.2"
 pytest-cov = ">=4.0"
+pytest-mock = ">=3.0"
 pykka = "^3.0"
 tox = "^3.24"
 ni-python-styleguide = ">=0.4.1"
