--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Check for files dirtied by codegen
         run: git diff --exit-code
       - name: Run tests
-        run: poetry run pytest
+        run: python -m tox -c tox.ini
       - name: Run linters
         run: |
           poetry run ni-python-styleguide lint
