PR workflow: Run unit tests
Signed-off-by: Brad Keryan <brad.keryan@ni.com>

--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -37,3 +37,5 @@ jobs:
           poetry run python src/codegen --dest generated/nidaqmx
       - name: Check for files dirtied by codegen
         run: git diff --exit-code
+      - name: Run unit tests
+        run: poetry run pytest tests/unit
