tests: Add task init/close unit tests (#313)
* tests: Add dependency on pytest-mock

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

* tests: Add some Task unit test cases

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

* tests: Rewrite task unit tests

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

* tests: Refactor new unit tests

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

* Update poetry.lock

* PR workflow: Run unit tests

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

* tests: Remove self.name workaround and fix task lifetime

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

* task: Avoid calling self.name in error cases

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

* tests: Fix lint errors

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

* PR workflow: Enable verbose and coverage for unit tests

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

* tests: Enable ResourceWarning when running tests

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

* tests: Add ResourceWarning test case and remove unnecessary fixtures

* task: Don't report ResourceWarning when detaching from a gRPC session

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

---------

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ grpc = ["grpcio", "protobuf"]
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.2"
 pytest-cov = ">=4.0"
+pytest-mock = ">=3.0"
 pykka = "^3.0"
 tox = "^3.24"
 ni-python-styleguide = ">=0.4.1"
@@ -75,6 +76,9 @@ extend_exclude = "docs,generated,src/codegen/metadata,src/codegen/templates"
 
 [tool.ni-python-styleguide]
 extend_exclude = "docs,generated,src/codegen/metadata,src/codegen/templates,src/handwritten"
+
+[tool.pytest.ini_options]
+filterwarnings = ["always::ResourceWarning"]
 
 [build-system]
 requires = ["poetry>=1.2"]
