--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,7 +78,9 @@ extend_exclude = "docs,generated,src/codegen/metadata,src/codegen/templates"
 extend_exclude = "docs,generated,src/codegen/metadata,src/codegen/templates,src/handwritten"
 
 [tool.pytest.ini_options]
-filterwarnings = ["always::ResourceWarning"]
+addopts = "--doctest-modules --strict-markers"
+filterwarnings = ["always::ImportWarning", "always::ResourceWarning"]
+testpaths = ["tests"]
 
 [build-system]
 requires = ["poetry>=1.2"]
