--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,13 @@ extend_exclude = "docs,generated,src/codegen/metadata,src/codegen/templates,src/
 addopts = "--doctest-modules --strict-markers"
 filterwarnings = ["always::ImportWarning", "always::ResourceWarning"]
 testpaths = ["tests"]
+filterwarnings = ["always::ResourceWarning"]
+markers = [
+  # Defines custom markers used by nidcpower system tests. Prevents PytestUnknownMarkWarning.
+  "library_only: tests only the libaray interpreter implementation.",
+  "grpc_only: tests only the grpc interpreter implementation.",
+  "new_task_name: name of the new task to be created."
+]
 
 [build-system]
 requires = ["poetry>=1.2"]
