tests: Update tox.ini to test with and without grpc
Signed-off-by: Brad Keryan <brad.keryan@ni.com>

--- a/tox.ini
+++ b/tox.ini
@@ -5,22 +5,24 @@
 
 [tox]
 isolated_build = true
-envlist = clean, py37, py38, py39, py310, py311, report
+envlist = clean, py{37,38,39,310,311}-base, py{37,38,39,310,311}-grpc, report
 
 [testenv]
-whitelist_externals = poetry
-commands =
-   poetry install -v
-   poetry run pytest --quiet --cov=generated/nidaqmx --cov-append --cov-report= --junitxml=pytests-{envname}.xml tests/ {posargs}
-
-[testenv:clean]
 skip_install = true
 whitelist_externals = poetry
+setenv =
+   base: INSTALL_OPTS=--only main,test
+   grpc: INSTALL_OPTS=--only main,test --extras grpc
+   base: PYTEST_OPTS=-k "not grpc"
+   grpc: PYTEST_OPTS=
+commands =
+   poetry install -v {env:INSTALL_OPTS}
+   poetry run pytest --quiet --cov=generated/nidaqmx --cov-append --cov-report= --junitxml=pytests-{envname}.xml {env:PYTEST_OPTS} {posargs}
+
+[testenv:clean]
 commands = poetry run coverage erase
 
 [testenv:report]
-skip_install = true
-whitelist_externals = poetry
-commands = 
+commands =
    poetry run coverage html
    poetry run coverage report
