tests: Add a tox environment to validate docs
Signed-off-by: Brad Keryan <brad.keryan@ni.com>

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [tox]
 isolated_build = true
-envlist = clean, py{37,38,39,310,311}-base, py{37,38,39,310,311}-grpc, report
+envlist = clean, py{37,38,39,310,311}-base, py{37,38,39,310,311}-grpc, report, docs
 
 [testenv]
 skip_install = true
@@ -26,3 +26,10 @@ commands = poetry run coverage erase
 commands =
    poetry run coverage html
    poetry run coverage report
+
+[testenv:docs]
+# base_python should match the version specified in .readthedocs.yml
+base_python = python3.7
+commands =
+   poetry install -v --only main --extras docs
+   poetry run poetry run sphinx-build -b html -W docs docs/_build
