--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,6 +87,9 @@ markers = [
   "grpc_only: tests only the grpc interpreter implementation.",
   "new_task_name: name of the new task to be created.",
   "device_name: name of the device used for testing.",
+  "task_name: the existing task name to be used for testing.",
+  "channel_name: the existing channel name to be used for testing.",
+  "scale_name: the existing scale name to be used for testing."
 ]
 
 [build-system]
