PR workflow: Generate docs
Signed-off-by: Brad Keryan <brad.keryan@ni.com>

--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -39,3 +39,5 @@ jobs:
         run: git diff --exit-code
       - name: Run unit tests
         run: poetry run pytest -v --cov=generated/nidaqmx tests/unit
+      - name: Generate docs
+        run: poetry run tox -e docs
