--- a/tox.ini
+++ b/tox.ini
@@ -32,4 +32,5 @@ commands =
 base_python = python3.7
 commands =
    poetry install -v --only main --extras docs
+   # Use -W to treat warnings as errors.
    poetry run poetry run sphinx-build -b html -W docs docs/_build
