tests: Make tox.ini less overly poetic
Signed-off-by: Brad Keryan <brad.keryan@ni.com>

--- a/tox.ini
+++ b/tox.ini
@@ -33,4 +33,4 @@ base_python = python3.7
 commands =
    poetry install -v --only main --extras docs
    # Use -W to treat warnings as errors.
-   poetry run poetry run sphinx-build -b html -W docs docs/_build
+   poetry run sphinx-build -b html -W docs docs/_build
