tests: Change time_out to timeout for consistency
Signed-off-by: Brad Keryan <brad.keryan@ni.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,7 +90,7 @@ markers = [
   "task_name: the existing task name to be used for testing.",
   "channel_name: the existing channel name to be used for testing.",
   "scale_name: the existing scale name to be used for testing.",
-  "time_out: the timeout in seconds."
+  "timeout: the timeout in seconds."
 ]
 
 [build-system]
