--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,7 +85,12 @@ markers = [
   # Defines custom markers used by nidaqmx tests. Prevents PytestUnknownMarkWarning.
   "library_only: tests only the library interpreter implementation.",
   "grpc_only: tests only the grpc interpreter implementation.",
-  "new_task_name: name of the new task to be created."
+  "new_task_name: name of the new task to be created.",
+  "device_name: name of the device used for testing.",
+  "task_name: the existing task name to be used for testing.",
+  "channel_name: the existing channel name to be used for testing.",
+  "scale_name: the existing scale name to be used for testing.",
+  "timeout: the timeout in seconds."
 ]
 
 [build-system]
