--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,8 +83,12 @@ filterwarnings = ["always::ImportWarning", "always::ResourceWarning"]
 testpaths = ["tests"]
 markers = [
   # Defines custom markers used by nidaqmx tests. Prevents PytestUnknownMarkWarning.
-  "library_only: tests only the library interpreter implementation.",
-  "grpc_only: tests only the grpc interpreter implementation.",
+  "library_only: run the test with only the library interpreter implementation.",
+  "library_skip(reason=None): skip the given test function with the library interpreter implementation.",
+  "library_xfail(condition, ..., *, reason=..., run=True, raises=None, strict=xfail_strict): mark the test function as an expected failure with the library interpreter implementation.",
+  "grpc_only: run the test with only the gRPC interpreter implementation.",
+  "grpc_skip(reason=None): skip the given test function with the gRPC interpreter implementation.",
+  "grpc_xfail(condition, ..., *, reason=..., run=True, raises=None, strict=xfail_strict): mark the test function as an expected failure with the gRPC interpreter implementation.",
   "new_task_name: name of the new task to be created.",
   "device_name: name of the device used for testing.",
   "task_name: the existing task name to be used for testing.",
