--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,7 +94,9 @@ markers = [
   "task_name: the existing task name to be used for testing.",
   "channel_name: the existing channel name to be used for testing.",
   "scale_name: the existing scale name to be used for testing.",
-  "timeout: the timeout in seconds."
+  "timeout: the timeout in seconds.",
+  "grpc_session_name: specifies GrpcSessionOptions.session_name.",
+  "grpc_session_initialization_behavior: specifies GrpcSessionOptions.initialization_behavior."
 ]
 
 [build-system]
