--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,10 +72,10 @@ tox = "^3.24"
 
 [tool.black]
 line-length = 100
-extend_exclude = "docs,generated,src/codegen/metadata,src/codegen/templates"
+extend_exclude = ".tox,docs,generated,src/codegen/metadata,src/codegen/templates"
 
 [tool.ni-python-styleguide]
-extend_exclude = "docs,generated,src/codegen/metadata,src/codegen/templates,src/handwritten"
+extend_exclude = ".tox,docs,generated,src/codegen/metadata,src/codegen/templates,src/handwritten"
 
 [tool.pytest.ini_options]
 addopts = "--doctest-modules --strict-markers"
