tests: Add a 2nd global channel and 2nd persisted task
Signed-off-by: Brad Keryan <brad.keryan@ni.com>

--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -2,6 +2,43 @@
 MajorVersion = 21
 MinorVersion = 8
 
+[DAQmxChannel AOTesterTask/VoltageOut_0]
+AO.OutputType = Voltage
+AO.Voltage.Units = Volts
+AO.Max = 16
+AO.Min = -16
+ChanType = Analog Output
+AO.TermCfg = Differential
+PhysicalChanName = aoTester/ao0
+
+[DAQmxChannel AOTesterTask/VoltageOut_1]
+AO.OutputType = Voltage
+AO.Voltage.Units = Volts
+AO.Max = 16
+AO.Min = -16
+ChanType = Analog Output
+AO.TermCfg = Differential
+PhysicalChanName = aoTester/ao1
+
+[DAQmxChannel AOTesterTask/VoltageOut_2]
+AO.OutputType = Voltage
+AO.Voltage.Units = Volts
+AO.Max = 16
+AO.Min = -16
+ChanType = Analog Output
+AO.TermCfg = Differential
+PhysicalChanName = aoTester/ao2
+
+[DAQmxTask AOTesterTask]
+Channels = AOTesterTask/VoltageOut_0, AOTesterTask/VoltageOut_1, AOTesterTask/VoltageOut_2
+SampQuant.SampMode = Finite Samples
+SampClk.ActiveEdge = Rising
+SampQuant.SampPerChan = 100
+SampClk.Rate = 1000
+SampTimingType = Sample Clock
+RegenMode = Allow Regeneration
+SampClk.Src =
+
 [DAQmxChannel VoltageTesterChannel]
 AI.MeasType = Voltage
 AI.Voltage.Units = Volts
@@ -12,6 +49,18 @@ ChanType = Analog Input
 PhysicalChanName = tsVoltageTester1/ai0
 Descr = 
 Author = "Test Author"
+AllowInteractiveEditing = True
+
+[DAQmxChannel VoltageTesterChannel2]
+AI.MeasType = Voltage
+AI.Voltage.Units = Volts
+AI.TermCfg = Differential
+AI.Max = 5
+AI.Min = -5
+ChanType = Analog Input
+PhysicalChanName = tsVoltageTester1/ai1
+Descr = "Another channel"
+Author = "Another Test Author"
 AllowInteractiveEditing = True
 
 [DAQmxChannel VoltageTesterTask/Voltage_0]
