tests: Add temporary_grpc_channel mark
Allow tests to request a temporary gRPC channel so that they can
specify gRPC options or close the channel.

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,7 +96,8 @@ markers = [
   "scale_name: the existing scale name to be used for testing.",
   "timeout: the timeout in seconds.",
   "grpc_session_name: specifies GrpcSessionOptions.session_name.",
-  "grpc_session_initialization_behavior: specifies GrpcSessionOptions.initialization_behavior."
+  "grpc_session_initialization_behavior: specifies GrpcSessionOptions.initialization_behavior.",
+  "temporary_grpc_channel(options=...): specifies that the test uses a separate gRPC channel.",
 ]
 
 [build-system]
