tox.ini: Change `whitelist_externals` to `allowlist_externals`
Tox 4.x no longer supports `whitelist_externals`.

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ envlist = clean, py{37,38,39,310,311}-base, py{37,38,39,310,311}-grpc, report, d
 
 [testenv]
 skip_install = true
-whitelist_externals = poetry
+allowlist_externals = poetry
 setenv =
    base: INSTALL_OPTS=--only main,test
    grpc: INSTALL_OPTS=--only main,test --extras grpc
