--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ commands =
    poetry run coverage report
 
 [testenv:docs]
-# base_python should match the version specified in .readthedocs.yml
+# base_python should match the version specified in .readthedocs.yml and the PR workflow.
 base_python = python3.9
 commands =
    poetry run python --version
