--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -6,14 +6,12 @@ on:
       - master
 jobs:
   build:
-
     runs-on: 
       - ubuntu-latest
     strategy:
       matrix:
         # The codegen scripts require Python 3.8 or later.
         python-version: ["3.8"]
-
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
@@ -37,7 +35,47 @@ jobs:
           poetry run python src/codegen --dest generated/nidaqmx
       - name: Check for files dirtied by codegen
         run: git diff --exit-code
+  run-unit-tests:
+    runs-on:
+      - ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - uses: Gr1N/setup-poetry@v8
+        with:
+          poetry-version: "1.4.0"
+      - run: poetry --version
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          poetry install
       - name: Run unit tests
         run: poetry run pytest -v --cov=generated/nidaqmx tests/unit
+  generate-docs:
+    runs-on:
+      - ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.9"]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - uses: Gr1N/setup-poetry@v8
+        with:
+          poetry-version: "1.4.0"
+      - run: poetry --version
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          poetry install
       - name: Generate docs
         run: poetry run tox -e docs
