docs: Upgrade readthedocs workflow to Python 3.9 (#407)
* docs: Upgrade readthedocs workflow to Python 3.9

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

* tox.ini: Print Python version for debugging

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

* tox.ini: Update comment about Python version for docs

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

* PR workflow: split unit tests and docs into separate jobs

This allows us to control their Python version independently of the "build" job.

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

---------

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ setenv =
    base: PYTEST_OPTS=-k "not grpc"
    grpc: PYTEST_OPTS=
 commands =
+   poetry run python --version
    poetry install -v {env:INSTALL_OPTS}
    poetry run pytest --quiet --cov=generated/nidaqmx --cov-append --cov-report= --junitxml=pytests-{envname}.xml {env:PYTEST_OPTS} {posargs}
 
@@ -28,9 +29,10 @@ commands =
    poetry run coverage report
 
 [testenv:docs]
-# base_python should match the version specified in .readthedocs.yml
-base_python = python3.7
+# base_python should match the version specified in .readthedocs.yml and the PR workflow.
+base_python = python3.9
 commands =
+   poetry run python --version
    poetry install -v --only main --extras docs
    # Use -W to treat warnings as errors.
    poetry run sphinx-build -b html -W docs docs/_build
