--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -2,11 +2,15 @@
 
 version: 2
 
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.9"
+
 sphinx:
   configuration: docs/conf.py
 
 python:
-  version: 3.9
   install:
     - method: pip
       path: .
