--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,11 @@ importlib_metadata = {version="^4.2", python="~3.7"}
 # See https://github.com/readthedocs/readthedocs.org/issues/4912.
 Sphinx = {version="^4.3", optional=true}
 sphinx_rtd_theme = {version="^1.0", optional=true}
-grpcio = { version = "^1.49.0", optional = true }
+grpcio = [
+  # no 32-bit wheel for 1.53.0 and later
+  {version=">=1.49.0,<1.53", python="<3.8", optional = true}, 
+  {version=">=1.49.0,<2.0", python="^3.8", optional = true},
+]
 protobuf = { version = "^4.21", optional = true }
 
 [tool.poetry.extras]
