--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -86,6 +86,7 @@ jobs:
       - windows
       - x64
       - rdss-nidaqmxbot-win-10-py32
+      timeout-minutes: 80
     steps:
       - uses: actions/checkout@v3
       - name: Install dependencies
@@ -99,6 +100,7 @@ jobs:
       - windows
       - x64
       - rdss-nidaqmxbot-win-10-py64
+      timeout-minutes: 80
     steps:
       - uses: actions/checkout@v3
       - name: Install dependencies
