--- a/.github/workflows/github_actions_aws_win_py32.yml
+++ b/.github/workflows/github_actions_aws_win_py32.yml
@@ -5,16 +5,18 @@ on:
     branches:
       - master
 jobs:
-  run-system-tests-python-32bit:
-    runs-on:
-      - self-hosted
-      - windows
-      - x64
-      - rdss-nidaqmxbot-win-10-py32
-    timeout-minutes: 80
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install dependencies
-        run: poetry install
-      - name: Run system tests
-        run: poetry run tox
+  do-the-job1:    
+    run-system-tests-python-32bit:
+      runs-on:
+        - self-hosted
+        - windows
+        - x86
+        - rdss-nidaqmxbot-win-10-py32
+      timeout-minutes: 80
+      steps:
+        - name: checkout repository
+          uses: actions/checkout@v3
+        - name: Install dependencies
+          run: poetry install
+        - name: Run system tests
+          run: poetry run tox
