CI: Add workflow_call/dispatch
Signed-off-by: Brad Keryan <brad.keryan@ni.com>

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - master
       - 'releases/**'
+  workflow_call:
+  workflow_dispatch:
 jobs:
   build:
     uses: ./.github/workflows/build.yml
