--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -80,5 +80,5 @@ jobs:
       - name: Generate docs
         run: poetry run tox -e docs
   run_system_tests:
-    - uses: ./.github/workflows/run_system_tests.yml
-    - needs: [build, run-unit-tests]
+    needs: [build, run-unit-tests]
+    uses: ./.github/workflows/run_system_tests.yml
