--- a/.github/workflows/run_system_tests.yml
+++ b/.github/workflows/run_system_tests.yml
@@ -5,7 +5,8 @@ on:
   workflow_dispatch:
 
 jobs:   
-  name: run_system_tests
+  run_system_tests:
+    name: Run system tests
     runs-on:
       - self-hosted
       - rdss-nidaqmxbot-${{ matrix.configuration }}
