Fix: Syntax changes

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,3 +16,6 @@ jobs:
   generate_docs:
     uses: ./.github/workflows/generate_docs.yml
     needs: [build]
+  run_system_tests:
+    uses: ./.github/workflows/run_system_tests.yml
+    needs: [build, run-unit-tests]
