--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,4 +18,4 @@ jobs:
     needs: [build]
   run_system_tests:
     uses: ./.github/workflows/run_system_tests.yml
-    needs: [build, run-unit-tests]
+    needs: [build, run_unit_tests]
