--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,23 +1,27 @@
-name: build
+name: Build
 
 on:
   workflow_call:
   workflow_dispatch:
 jobs:
   build:
+    name: Build
     runs-on: 
       - ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out repo
+        uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           # The codegen scripts require Python 3.8 or later.
           python-version: "3.8"
-      - uses: Gr1N/setup-poetry@v8
+      - name: Set up Poetry
+        uses: Gr1N/setup-poetry@v8
         with:
           poetry-version: "1.4.0"
-      - run: poetry --version
+      - name: Check Poetry version
+        run: poetry --version
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
