--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -1,10 +1,11 @@
-name: run_unit_tests
+name: Run unit tests
 
 on:
   workflow_call:
   workflow_dispatch:
 jobs:
   run_unit_tests:
+    name: Run unit tests
     runs-on:
       - ${{ matrix.os }}
     strategy:
@@ -12,15 +13,18 @@ jobs:
         os: [ubuntu-latest, windows-latest]
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out repo
+        uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - uses: Gr1N/setup-poetry@v8
+      - name: Set up Poetry
+        uses: Gr1N/setup-poetry@v8
         with:
           poetry-version: "1.4.0"
-      - run: poetry --version
+      - name: Check Poetry version
+        run: poetry --version
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
