--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,10 +9,13 @@ on:
   workflow_dispatch:
 jobs:
   build:
+    name: Build
     uses: ./.github/workflows/build.yml
   run_unit_tests:
+    name: Run unit tests
     uses: ./.github/workflows/run_unit_tests.yml
     needs: [build]
   generate_docs:
+    name: Generate docs
     uses: ./.github/workflows/generate_docs.yml
     needs: [build]
