--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,6 +16,13 @@ jobs:
   generate_docs:
     uses: ./.github/workflows/generate_docs.yml
     needs: [build]
-  run_system_tests:
+  run_system_tests_py32:
     uses: ./.github/workflows/run_system_tests.yml
     needs: [build, run_unit_tests]
+    with: 
+      configuration: win-10-py32
+  run_system_tests_py64:
+    uses: ./.github/workflows/run_system_tests.yml
+    needs: [run_system_tests_py32]
+    with: 
+      configuration: win-10-py64
