Reverted back the test changes

--- a/.github/workflows/run_system_tests_py32.yml
+++ b/.github/workflows/run_system_tests_py32.yml
@@ -7,7 +7,10 @@ jobs:
   run_system_tests:
     runs-on:
       - self-hosted
-      - rdss-nidaqmxbot-win-10-py32
+      - rdss-nidaqmxbot-${{ matrix.configuration }}
+    strategy:
+      matrix:
+        configuration: ["win-10-py32", "win-10-py64"]
     timeout-minutes: 80
     steps:
       - name: checkout repository
