--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,6 +16,6 @@ jobs:
   generate_docs:
     uses: ./.github/workflows/generate_docs.yml
     needs: [build]
-  run_system_tests_py32:
-    uses: ./.github/workflows/run_system_tests_py32.yml
+  run_system_tests:
+    uses: ./.github/workflows/run_system_tests.yml
     needs: [build, run_unit_tests]
