Test: Run sytem tests in PR.yml

--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -11,3 +11,7 @@ jobs:
   run_ci:
     name: Run CI
     uses: ./.github/workflows/CI.yml
+  run_system_tests:
+    name: Run system tests
+    uses: ./.github/workflows/run_system_tests.yml
+    needs: [run_ci]
