Test: Added all runner labels

--- a/.github/workflows/run_system_tests.yml
+++ b/.github/workflows/run_system_tests.yml
@@ -8,6 +8,8 @@ jobs:
     name: Run system tests
     runs-on:
       - self-hosted
+      - windows
+      - x64
       - rdss-nidaqmxbot-${{ matrix.configuration }}
     strategy:
       matrix:
